label overflow fix

--- a/css/popup.css
+++ b/css/popup.css
@@ -213,12 +213,14 @@ html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .ml-replace-all-hues
     text-overflow: ellipsis;
     max-width: 299px;
     display: inline-block;
+    line-height: 15px;
 }
 html[ml-stage-mode]:not([ml-stage-mode="complete-complex"]) .ml-dialog-label:not(#imp) {
     background-color: transparent!important;
 }
 .ml-dialog-label.hue {
     position: relative;
+    overflow: visible;
 }
 
 .ml-dialog-label:after {
